[package]
name = "egui-modal"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "a modal library for egui"
repository = "https://github.com/n00kii/egui-modal"
readme = "README.md"
authors = ["n00kii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/rustbasic/egui", rev = "48e8f62" }
egui = { git = "https://github.com/rustbasic/egui", rev = "48e8f62" }
